pdt.core/src/org/cs3/pl/parser/internal/term/PrologTermParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. PrologTermParser.java */
package org.cs3.pl.parser.internal.term;
import java.io.InputStream;
import java.io.FileInputStream;
import java.io.File;
import java.io.FileNotFoundException;
import java.util.List;
import java.util.ArrayList;

class PrologTermParser/*@bgen(jjtree)*/implements PrologTermParserTreeConstants, PrologTermParserConstants {/*@bgen(jjtree)*/
  protected JJTPrologTermParserState jjtree = new JJTPrologTermParserState();public OPS ops = new OPS();

        boolean test(Token t1, Token t2) {
                return t1.beginOffset == t2.endOffset;
//		System.err.println("begin: "+t1.image +","+ t1.beginOffset + ", end: "+ t2.endOffset);
//		return true;
        }

        void jjtreeOpenNodeScope(Node n)
    {
        Token t = getToken(1);
        //System.err.println("open node of type "+PrologTermParserTreeConstants.jjtNodeName[((SimpleNode)n).id]);
        //System.err.prinln("   first token: "+t.image+" at line "+t.beginLine+", column "+t.beginColumn+".");
      ((SimpleNode)n).setFirstToken(t);

    }

    void jjtreeCloseNodeScope(Node n)
    {
      Token t = getToken(0);
        //System.err.prinln("closing node of type "+n);
        //System.err.prinln("   last token: "+t.image+" at line "+t.beginLine+", column "+t.beginColumn+".");      
      ((SimpleNode)n).setLastToken(t);



                //need to "manualy" figure out the start token, as node scope hooks are
                //called "to late" for nodes like ASTInfixTerm 
                //if the nodes children have already been poped, this should work:
                SimpleNode s = (SimpleNode)n;
                if(s.jjtGetNumChildren()>0){
                         SimpleNode firstChild = (SimpleNode)s.jjtGetChild(0);
                         s.setFirstToken(firstChild.getFirstToken());
                }
                //System.err.println("created: "+ s+" : "+s.getImage());


                if(n instanceof ASTInfixTerm){
                 ((ASTInfixTerm)n).flatten();

          }
    }
        private List errors = new ArrayList();

        public List getErrors() {
                return errors;
        }
        public void error_skipto(int kind) {
          ParseException e = generateParseException();
          errors.add(e);
          Token t;
          do {
            t = getNextToken();
          } while (t.kind != kind && t.kind != EOF);
        }
        public ASTCompilationUnit getASTRoot(){
                return (ASTCompilationUnit) jjtree.rootNode();
        }
  public static void main(String args[]) throws FileNotFoundException {
        InputStream stream = null;
        if(args==null||args.length==0){
            //System.err.println("Reading from standard input...");
            stream=System.in;
        }
        else{
                stream=PrologTermParser.class.getResourceAsStream(args[0]);
        }
    PrologTermParser t = new PrologTermParser(stream);
    try {
      SimpleNode n = t.CompilationUnit();
      n.dump("");
      System.err.println("Thank you.");
    } catch (Exception e) {
      System.err.println("Oops.");
      System.err.println(e.getMessage());
      e.printStackTrace();
    }
  }

  final public SimpleNode CompilationUnit() throws ParseException {
                                /*@bgen(jjtree) CompilationUnit */
  ASTCompilationUnit jjtn000 = new ASTCompilationUnit(this, JJTCOMPILATIONUNIT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
    try {
      label_1:
      while (true) {
        if (jj_2_1(1)) {
          ;
        } else {
          break label_1;
        }
        try {
          Member();
        } catch (ParseException e) {
                e.printStackTrace();
            error_skipto(DOT);
            //pop nodes from the stack down to the last
            //successfully parsed term
                ops.clear();
                while(jjtree.nodeArity()>0 &&!(jjtree.peekNode() instanceof ASTMember)){

                        //System.err.println("popped: "+jjtree.popNode());
                }
//		System.err.println("next i will read: "+getToken(1));

        }
      }
      jj_consume_token(0);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtreeCloseNodeScope(jjtn000);
    {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtreeCloseNodeScope(jjtn000);
    }
    }
    throw new Error("Missing return statement in function");
  }

  final public void Member() throws ParseException {
               /*@bgen(jjtree) Member */
  ASTMember jjtn000 = new ASTMember(this, JJTMEMBER);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
    try {
      Term();
      jj_consume_token(DOT);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtreeCloseNodeScope(jjtn000);
          }
    }
  }

  final public void Term() throws ParseException {
 String opImage;
    PrefixBoundTerm();
    label_2:
    while (true) {
      if (jjtree.peekNode()!=null
                              &&ops.isValidRHInfixOp(getToken(1).image,((SimpleNode)jjtree.peekNode()).getPrecedence())) {
        ;
      } else {
        break label_2;
      }
      InfixOperator();
                        opImage=getToken(0).image;
                        ops.pushInfixOp(opImage);
      Term();
                  ASTInfixTerm jjtn001 = new ASTInfixTerm(this, JJTINFIXTERM);
                  boolean jjtc001 = true;
                  jjtree.openNodeScope(jjtn001);
                  jjtreeOpenNodeScope(jjtn001);
      try {
                  jjtree.closeNodeScope(jjtn001,  3);
                  jjtc001 = false;
                  jjtreeCloseNodeScope(jjtn001);
                        ops.popOp();
      } finally {
                  if (jjtc001) {
                    jjtree.closeNodeScope(jjtn001,  3);
                    jjtreeCloseNodeScope(jjtn001);
                  }
      }
    }
  }

  final public void PrefixBoundTerm() throws ParseException {
    if (jj_2_2(2147483647) && (test(getToken(2),getToken(1)) &&
                                            !",".equals(getToken(1).image))) {
      CompoundTerm();
    } else if (jj_2_3(2147483647)) {
      Atom();
    } else if (jj_2_4(2147483647) && (ops.isValidRHPrefixOp(getToken(1).image, getToken(2).image))) {
      PrefixOperator();
                                ops.pushPrefixOp(getToken(0).image);
      Term();
                          ASTPrefixTerm jjtn001 = new ASTPrefixTerm(this, JJTPREFIXTERM);
                          boolean jjtc001 = true;
                          jjtree.openNodeScope(jjtn001);
                          jjtreeOpenNodeScope(jjtn001);
      try {
                          jjtree.closeNodeScope(jjtn001,  2);
                          jjtc001 = false;
                          jjtreeCloseNodeScope(jjtn001);
                                ops.popOp();
      } finally {
                          if (jjtc001) {
                            jjtree.closeNodeScope(jjtn001,  2);
                            jjtreeCloseNodeScope(jjtn001);
                          }
      }
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OPERATOR:
      case CHARACTER_ATOM:
      case IDENTIFIER:
      case CUT:
      case DOT:
        Atom();
        break;
      case 25:
        ParanthesisTerm();
        break;
      case 30:
        BracesTerm();
        break;
      case 31:
        ListTerm();
        break;
      case DECIMAL_LITERAL:
      case BIN_LITERAL:
      case OCT_LITERAL:
      case HEX_LITERAL:
      case FLOATING_POINT_LITERAL:
        Number();
        break;
      case STRING_LITERAL:
        String();
        break;
      case VARIABLE:
        Variable();
        break;
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void BracesTerm() throws ParseException {
 /*@bgen(jjtree) BracesTerm */
  ASTBracesTerm jjtn000 = new ASTBracesTerm(this, JJTBRACESTERM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
    try {
      jj_consume_token(30);
         ops.pushReset();
      Term();
         ops.popOp();
      jj_consume_token(29);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtreeCloseNodeScope(jjtn000);
          }
    }
  }

  final public void ListTerm() throws ParseException {
 /*@bgen(jjtree) ListTerm */
  ASTListTerm jjtn000 = new ASTListTerm(this, JJTLISTTERM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
    try {
      jj_consume_token(31);
         ops.pushReset();
      if (jj_2_5(1)) {
        Term();
      } else {
        ;
      }
         ops.popOp();
      jj_consume_token(28);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtreeCloseNodeScope(jjtn000);
          }
    }
  }

  final public void ParanthesisTerm() throws ParseException {
 /*@bgen(jjtree) ParanthesisTerm */
  ASTParanthesisTerm jjtn000 = new ASTParanthesisTerm(this, JJTPARANTHESISTERM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
    try {
      jj_consume_token(25);
         ops.pushReset();
      Term();
         ops.popOp();
      jj_consume_token(27);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtreeCloseNodeScope(jjtn000);
          }
    }
  }

  final public void CompoundTerm() throws ParseException {
 /*@bgen(jjtree) CompoundTerm */
  ASTCompoundTerm jjtn000 = new ASTCompoundTerm(this, JJTCOMPOUNDTERM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
    try {
      Atom();
      jj_consume_token(25);
         ops.pushReset();
      Term();
         ops.popOp();
      jj_consume_token(27);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtreeCloseNodeScope(jjtn000);
          }
    }
  }

  final public void Atom() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CUT:
      Cut();
      break;
    case OPERATOR:
    case IDENTIFIER:
    case DOT:
      Identifier();
      break;
    case CHARACTER_ATOM:
      Characters();
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Cut() throws ParseException {
             /*@bgen(jjtree) Cut */
  ASTCut jjtn000 = new ASTCut(this, JJTCUT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
    try {
      jj_consume_token(CUT);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtreeCloseNodeScope(jjtn000);
          }
    }
  }

  final public void Number() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case DECIMAL_LITERAL:
    case BIN_LITERAL:
    case OCT_LITERAL:
    case HEX_LITERAL:
      Integer();
      break;
    case FLOATING_POINT_LITERAL:
      Float();
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void String() throws ParseException {
                /*@bgen(jjtree) String */
  ASTString jjtn000 = new ASTString(this, JJTSTRING);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
    try {
      jj_consume_token(STRING_LITERAL);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtreeCloseNodeScope(jjtn000);
          }
    }
  }

  final public void Variable() throws ParseException {
                  /*@bgen(jjtree) Variable */
  ASTVariable jjtn000 = new ASTVariable(this, JJTVARIABLE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
    try {
      jj_consume_token(VARIABLE);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtreeCloseNodeScope(jjtn000);
          }
    }
  }

  final public void Identifier() throws ParseException {
                     /*@bgen(jjtree) Identifier */
  ASTIdentifier jjtn000 = new ASTIdentifier(this, JJTIDENTIFIER);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OPERATOR:
        jj_consume_token(OPERATOR);
        break;
      case IDENTIFIER:
        jj_consume_token(IDENTIFIER);
        break;
      case DOT:
        jj_consume_token(DOT);
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtreeCloseNodeScope(jjtn000);
          }
    }
  }

  final public void Integer() throws ParseException {
                  /*@bgen(jjtree) Integer */
  ASTInteger jjtn000 = new ASTInteger(this, JJTINTEGER);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DECIMAL_LITERAL:
        jj_consume_token(DECIMAL_LITERAL);
        break;
      case BIN_LITERAL:
        jj_consume_token(BIN_LITERAL);
        break;
      case OCT_LITERAL:
        jj_consume_token(OCT_LITERAL);
        break;
      case HEX_LITERAL:
        jj_consume_token(HEX_LITERAL);
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtreeCloseNodeScope(jjtn000);
    }
    }
  }

  final public void Float() throws ParseException {
               /*@bgen(jjtree) Float */
  ASTFloat jjtn000 = new ASTFloat(this, JJTFLOAT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
    try {
      jj_consume_token(FLOATING_POINT_LITERAL);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtreeCloseNodeScope(jjtn000);
          }
    }
  }

  final public void Characters() throws ParseException {
                    /*@bgen(jjtree) Characters */
  ASTCharacters jjtn000 = new ASTCharacters(this, JJTCHARACTERS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
    try {
      jj_consume_token(CHARACTER_ATOM);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtreeCloseNodeScope(jjtn000);
          }
    }
  }

  final public void PrefixOperator() throws ParseException {
                        /*@bgen(jjtree) PrefixOperator */
  ASTPrefixOperator jjtn000 = new ASTPrefixOperator(this, JJTPREFIXOPERATOR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
    try {
      jj_consume_token(OPERATOR);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          jjtreeCloseNodeScope(jjtn000);
                Token t = getToken(0);
//  	System.err.println("Operator "+t.image+" at line "+t.beginLine+" col "+t.beginColumn+" was interpreted as Prefix Operator.");

    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtreeCloseNodeScope(jjtn000);
          }
    }
  }

  final public void InfixOperator() throws ParseException {
                       /*@bgen(jjtree) InfixOperator */
  ASTInfixOperator jjtn000 = new ASTInfixOperator(this, JJTINFIXOPERATOR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
    try {
      jj_consume_token(OPERATOR);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          jjtreeCloseNodeScope(jjtn000);
                Token t = getToken(0);
//  	System.err.println("Operator "+t.image+" at line "+t.beginLine+" col "+t.beginColumn+" was interpreted as Infix Operator.");

    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtreeCloseNodeScope(jjtn000);
          }
    }
  }

  final private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  final private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  final private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  final private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  final private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  final private boolean jj_3R_13() {
    if (jj_3R_23()) return true;
    return false;
  }

  final private boolean jj_3R_33() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(8)) {
    jj_scanpos = xsp;
    if (jj_scan_token(9)) {
    jj_scanpos = xsp;
    if (jj_scan_token(10)) {
    jj_scanpos = xsp;
    if (jj_scan_token(11)) return true;
    }
    }
    }
    return false;
  }

  final private boolean jj_3R_11() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(6)) {
    jj_scanpos = xsp;
    if (jj_scan_token(17)) {
    jj_scanpos = xsp;
    if (jj_scan_token(24)) return true;
    }
    }
    return false;
  }
